crates/pgls_pretty_print/tests/snapshots/multi/tests__write_parallel_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/write_parallel.sql
snapshot_kind: text
---
BEGIN;

SET parallel_setup_cost = 0;

SET parallel_tuple_cost = 0;

SET min_parallel_table_scan_size = 0;

SET max_parallel_workers_per_gather = 4;

CREATE TABLE parallel_write
AS
  SELECT
    length(stringu1)
  FROM
    tenk1
  GROUP BY length(stringu1);

CREATE TABLE parallel_write
AS
  SELECT
    length(stringu1)
  FROM
    tenk1
  GROUP BY length(stringu1);

DROP TABLE "parallel_write";

SELECT
  length(stringu1)
INTO parallel_write
FROM
  tenk1
GROUP BY length(stringu1);

SELECT
  length(stringu1)
INTO parallel_write
FROM
  tenk1
GROUP BY length(stringu1);

DROP TABLE "parallel_write";

CREATE MATERIALIZED VIEW parallel_mat_view
AS
  SELECT
    length(stringu1)
  FROM
    tenk1
  GROUP BY length(stringu1);

CREATE MATERIALIZED VIEW parallel_mat_view
AS
  SELECT
    length(stringu1)
  FROM
    tenk1
  GROUP BY length(stringu1);

CREATE UNIQUE INDEX ON parallel_mat_view USING btree (length);

REFRESH MATERIALIZED VIEW parallel_mat_view;

REFRESH MATERIALIZED VIEW CONCURRENTLY parallel_mat_view;

DROP MATERIALIZED VIEW "parallel_mat_view";

PREPARE prep_stmt
AS SELECT
  length(stringu1)
FROM
  tenk1
GROUP BY length(stringu1);;

CREATE TABLE parallel_write AS EXECUTE prep_stmt;

CREATE TABLE parallel_write AS EXECUTE prep_stmt;

DROP TABLE "parallel_write";

ROLLBACK;
