crates/pgls_pretty_print/tests/snapshots/multi/tests__xmlmap_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/xmlmap.sql
snapshot_kind: text
---
CREATE SCHEMA "testxmlschema";

CREATE TABLE testxmlschema.test1 (
  a INT,
  b TEXT
);

INSERT INTO testxmlschema.test1 VALUES (1, 'one'), (2, 'two'), (-1, NULL);

CREATE DOMAIN testxmldomain AS VARCHAR;

CREATE TABLE testxmlschema.test2 (
  z INT,
  y VARCHAR(500),
  x CHAR(6),
  w NUMERIC(9, 2),
  v SMALLINT,
  u BIGINT,
  t REAL,
  s TIME,
  stz TIME WITH TIME ZONE,
  r TIMESTAMP,
  rtz TIMESTAMP WITH TIME ZONE,
  q DATE,
  p XML,
  o testxmldomain,
  n BOOLEAN,
  m BYTEA,
  aaa TEXT
);

ALTER TABLE testxmlschema.test2
  DROP COLUMN aaa;

INSERT INTO testxmlschema.test2
VALUES
  (
    55,
    'abc',
    'def',
    98.6,
    2,
    999,
    0,
    '21:07',
    '21:11 +05',
    '2009-06-08 21:07:30',
    '2009-06-08 21:07:30 -07',
    '2009-06-08',
    NULL,
    'ABC',
    TRUE,
    'XYZ'
  );

SELECT table_to_xml('testxmlschema.test1', FALSE, FALSE, '');

SELECT table_to_xml('testxmlschema.test1', TRUE, FALSE, 'foo');

SELECT table_to_xml('testxmlschema.test1', FALSE, TRUE, '');

SELECT table_to_xml('testxmlschema.test1', TRUE, TRUE, '');

SELECT table_to_xml('testxmlschema.test2', FALSE, FALSE, '');

SELECT table_to_xmlschema('testxmlschema.test1', FALSE, FALSE, '');

SELECT table_to_xmlschema('testxmlschema.test1', TRUE, FALSE, '');

SELECT table_to_xmlschema('testxmlschema.test1', FALSE, TRUE, 'foo');

SELECT table_to_xmlschema('testxmlschema.test1', TRUE, TRUE, '');

SELECT table_to_xmlschema('testxmlschema.test2', FALSE, FALSE, '');

SELECT table_to_xml_and_xmlschema('testxmlschema.test1', FALSE, FALSE, '');

SELECT table_to_xml_and_xmlschema('testxmlschema.test1', TRUE, FALSE, '');

SELECT table_to_xml_and_xmlschema('testxmlschema.test1', FALSE, TRUE, '');

SELECT table_to_xml_and_xmlschema('testxmlschema.test1', TRUE, TRUE, 'foo');

SELECT query_to_xml('SELECT * FROM testxmlschema.test1', FALSE, FALSE, '');

SELECT
  query_to_xmlschema(
    'SELECT * FROM testxmlschema.test1',
    FALSE,
    FALSE,
    ''
  );

SELECT
  query_to_xml_and_xmlschema(
    'SELECT * FROM testxmlschema.test1',
    TRUE,
    TRUE,
    ''
  );
